--- a/static/global.css
+++ b/static/global.css
@@ -1,5 +1,5 @@
 :root {
-  --body-bg-color: var(--gray-0);
+  --body-bg-color: var(--gray-1);
   --body-line-height: 1.5rem;
   --button-font-size: var(--fonts-4);
   --button-padding: 1rem;
@@ -11,5 +11,8 @@
   --headings-line-height: 1.25;
   --headings-margin-bottom: var(--space-3);
   --body-font-size: var(--fonts-4);
-  --chip-font-size: inherit;
+  --chip-font-size: 1rem;
+  /* --font-family: 'EB Garmond', serif;
+  --headings-font-family: var(--font-family); */
+  --headings-font-weight: 400;
 }
